# nori

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  nori.code-workspace  readme.md
Resources/: bootstrap.py  box.shader.xml  font.shader.xml  frame_rect.py  simple.shader.xml
builds/cmake/: FindBZIP2_.cmake  FindFBXSDK.cmake  FindFT2.cmake  FindGLEW.cmake  FindGLFW.cmake  FindJSONCPP.cmake  FindLUA.cmake  FindPNG_.cmake  FindZLIB_.cmake
include/: colors.h  dispatch_queue.h  eventhandler.h  handler.h  logger.h  map.h  member.h  serialize.h  stdafx.h  thread.h  tp_member.h  tp_method.h  type_info.h  unique_ptr.h
src/: CMakeLists.txt  GLFW.cpp  GLFW.h  main.cpp  readme.h  template-type-deduction.cpp  todo.h
src/Resources/: args.lua  box.shader.xml  sprite.shader.xml
src/asset/: asset_manager.h
src/asset/ext/: fbx.cpp  jpeg.h  lua.h  png.h  regex.cpp  regex.h  targa.h  xml.h  xml_shader_parser.h
src/core/: object.h
src/editor/: frame_anchor.h  frame_hierarchy.h  frame_inspector.h  frame_project.h  frame_rate.h  frame_rect copy.h  frame_view.h
src/engine/asset/: asset_manager.h
src/engine/asset/ext/: bmf.h  fbx.cpp  fbx.h  ftf.h  jpeg.h  json.h  lua.cpp  lua.h  png.h  regex.cpp  regex.h  stb.h  targa.h  xml.h  xml_shader_parser.h
src/engine/core/: Application.cpp  Application.h  component.h  node.h  object.h  unique_ptr.cpp
src/engine/editor/: frame_anchor.h  frame_hierarchy.h  frame_inspector.h  frame_rate.h  frame_rect copy.h  frame_view.h
src/engine/math/: mat4.h  quat.h  vec2.h  vec3.h  vec4.h
src/engine/os/: getosver_ios.mm  getosver_linux.cpp  getosver_osx.mm  getosver_win32.cpp  input.h  osver.h  tickcount.cpp  tickcount.h
src/engine/renderer/: buffer.h  camera.h  pass.h  picker.cpp  picker.h  program.h  shader.h  state.h  texture.h  uniform.h
src/engine/renderer/2d/: frame_renderer.h  moveto.h  renderer.h  sprite_frame.h  texture_frame.h  texture_renderer copy.h  texture_renderer.h  tilemap.h  tilemap_renderer.h
src/engine/renderer/3d/: bone.h  mesh.h  mesh_renderer.h  skelmesh_animation.h  skelmesh_renderer.h
src/engine/renderer/GL/: GL_buffer.h  GL_ext.cpp  GL_ext.h  GL_framebuffer.h  GL_handle.h  GL_program.h  GL_shader.h  GL_state.cpp  GL_state.h  GL_texture.h  GL_uniform.h
src/engine/renderer/font/: bitmap_font.h  font.h  font_renderer.h  fontdata.inl  freetype_font.h
src/engine/renderer/math/: mat4.h  math.h  quat.h  vec2.h  vec3.h  vec4.h
src/engine/script/lua/: luaC.h  luabind.cpp
src/engine/script/lua/LUA/: lua_class.cpp  lua_class.h  lua_class_delegate.h  lua_class_property.h  lua_class_ref.h  lua_delegate.h  lua_helper.cpp  lua_helper.h  lua_metatable.h  lua_property.h  lua_property_impl.h  lua_ref.h  lua_userdata.h  lua_userdata_impl.h  lua_vm.cpp  lua_vm.h
src/engine/script/python/: Py_Application.cpp  Py_Application.h  Py_GL.cpp  Py_GL.h  Py_asset_manager.cpp  Py_component.cpp  Py_component.h  Py_ext.cpp  Py_ext.h  Py_node copy.cpp  Py_node.cpp  Py_node.h  Py_shader.cpp  Py_shader.h  Py_texture.cpp
src/engine/script/python/funkster/: funkster.cpp  funkster2.cpp  funkster4.cpp
src/engine/script/python/python.com/: custom.cpp  custom2.cpp  custom3.cpp  python_call.cpp
src/engine/ui/: button.h  checkbox.h  frame_rect.h  label.h  panel.h  picker.cpp  sprite.h  textfield.h  type_editor.h
src/engine/ui/component/: anchor.h  button_input.h  input.h
src/engine/ui/hud/: hud.h
src/math/: math.h
src/os/: getosver_linux.cpp  input.h  tickcount.cpp  tickcount.h
src/renderer/: program.h  shader.h  texture.h  uniform.h
src/renderer/2d/: frame_renderer.h  renderer.h  texture_renderer copy.h  texture_renderer.h
src/renderer/3d/: mesh_renderer.h  skelmesh_animation.h
src/renderer/GL/: GL_buffer.h  GL_ext.h  GL_framebuffer.h  GL_handle.h  GL_program.h  GL_state.cpp  GL_uniform.h
src/renderer/font/: font_renderer.h  fontdata.inl
src/script/lua/: lua_data_passing.cpp  luabind.cpp  luabind.h  luac.cpp
src/script/lua/LUA/: lua_class.cpp  lua_class_delegate.h  lua_class_property.h  lua_class_ref.h  lua_helper.h  lua_property_impl.h  lua_userdata.h  lua_userdata_impl.h  lua_vm.cpp  lua_vm.h
src/script/python/: Py_Application.cpp  Py_GL.h  Py_asset_manager.cpp  Py_custom.h  Py_node copy.cpp  Py_shader.cpp
src/script/python/funkster/: funkster3.cpp
src/script/python/python.com/: custom4.cpp  newnoddy.cpp  sublist.cpp
src/ui/: frame_rect.h  label.h  picker.h  type_editor.h
src/ui/hud/: hud.h
